unpackaged/main/default/objects/SBQQ__OptionConstraint__c/fields/SBQQ__CheckPriorPurchases__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__CheckPriorPurchases__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows you to check on past purchases in the Account.</description>
    <inlineHelpText>Sélectionnez si vous souhaitez référencer les achats antérieurs d&#39;Option contraignante dans le Compte.</inlineHelpText>
    <label>Check Prior Purchases</label>
    <type>Checkbox</type>
</CustomField>