unpackaged/main/default/objects/SBQQ__OptionConstraint__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Type__c</fullName>
    <description>Determines behavior of this constraint.</description>
    <inlineHelpText>Sélectionnez le comportement de cette contrainte : Dépendance signifie que l&#39;inclusion est requise, alors qu&#39;Exclusion signifie que la contrainte d&#39;option n&#39;est pas sélectionnée lorsque l&#39;option est contraignante et inversement.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dependency</fullName>
                <default>true</default>
                <label>Dependency</label>
            </value>
            <value>
                <fullName>Exclusion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>